<resources>
    <string name="app_name">CurseWork2_2</string>
    <string name="login">Войти</string>
    <string name="email">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="Registration">Зарегистрироваться</string>
    <string name="reg_question">Есть учетная запись?</string>
    <string name="username">Имя</string>
    <string name="reg_btn_text">Зарегистрироваться</string>
    <string name="login_question">Нет учетной записи?</string>
    <string name="logout">Выйти</string>
    <string name="drawer_open">Открыт</string>
    <string name="drawer_close">Закрыт</string>
    <string name="mail">Почта</string>
    <string name="mymovies">Моя фильмотека</string>
    <string name="mydirectors">Мои режиссеры</string>
    <string name="valueofmovies">Количество фильмов:</string>
    <string name="logout_item">Выйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_option">Изменить</string>
    <string name="search">Поиск</string>
</resources>